# cxbqn

./: .ackrc  .cmake-format.py  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix
cmake/: CheckGitSubmodules.cmake  CodeCoverage.cmake  FindBQN.cmake  FindReadline.cmake  GenBytecodeTests.cmake  GenHelpers.cmake  GenIdentityTests.cmake  GenPrimL0Tests.cmake  GenPrimL1Tests.cmake  GenPrimL2Tests.cmake  GenPrimL3Tests.cmake  GenPrimL4Tests.cmake  GenPrimL5Tests.cmake  GenPrimL6Tests.cmake  GenPrimTests.cmake  GenPrimThrowsTests.cmake  GenSimpleTests.cmake  GenUnderTests.cmake  GenUnderUndoTests.cmake  GenUndoTests.cmake  Linters.cmake
doc/: AddSystemFunctionChecklist.md  FFI.md  GPU.md  plot.md
doc/notes/: 0.2.1.md
doc/notes/0.10.0/: README.md
doc/notes/0.10.1/: README.md  massif.out.18714
doc/notes/0.3.2/: load-runtime.md  load-runtime.xtmemory
doc/notes/0.5.0/: README.md
doc/prof/: 0.2.1.md
doc/prof/0.2.1/: massif-exe-runtime
doc/vm-pres/: README.md  index.html  package-lock.json
doc/vm-pres/asset/: bqn.html  instr.html  runtime.html  ul1.html  ul2.html  ul3.html  ul4.html  vm.html
example/: plot.bqn
ext/: CMakeLists.txt  matplotlibcpp-ef0383f.h  tcbrindle-span.hpp
include/: README.md  cxbqn.hpp  cxbqn_config.hpp.in  cxbqn_debug.hpp  fmt.hpp  op.hpp  primitives.hpp  provides.hpp  scalar_types.hpp  types.hpp  types.hpp.inl  value_types.hpp  vm.hpp
include/cxbqn/: README.md  array_types.hpp  array_utils.hpp  block.hpp  comp_unit.hpp  comp_utils.hpp  config.hpp.in  cxbqn.hpp  cxbqn_namespace.hpp  debug.hpp  file_namespace.hpp  fmt.hpp  fs.hpp  mem.hpp  op.hpp  provides.hpp  rt_native.hpp  scalar_types.hpp  scope.hpp  sys.hpp  types.hpp  vm.hpp
include/cxbqn/__/: README.md  _compiled_compiler  _compiled_formatter  _compiled_runtime  c  compiled_compiler  compiled_compiler_annot  compiled_debug  compiled_formatter  compiled_runtime  compiled_runtime_annot  f  r  r0  r1
include/cxbqn/cuda/: all.hpp  arith.hpp  plus.hpp
include/cxbqn/detail/: types.hpp.inl
include/cxbqn/namespaces/: cxbqn.hpp  file.hpp  std.hpp
include/cxbqn/namespaces/cxbqn/: plot.hpp
include/detail/: types.hpp.inl
lib/: README.md  ut.bqn
lib/strings/: replaceall.bqn  split.bqn
lib/strings/detail/: locate.bqn  marksplit.bqn
src/: CMakeLists.txt  README.md  array.cpp  bi.cpp  block.cpp  blockdef.cpp  blockinst.cpp  compiled_runtime  debug.cpp  driver.cpp  fmt.cpp  instructions.cpp  instructions0.cpp  instructions1.cpp  op.cpp  primitives.cpp  provides.cpp  scope.cpp  types.cpp  value_types.cpp  vm.cpp  vm_macros.hpp
src/builtin/: arith.cpp  arraydepth.cpp  assert.cpp  catch.cpp  decompose.cpp  deshape.cpp  div.cpp  eq.cpp  feq.cpp  fillby.cpp  floor.cpp  fmtnum.cpp  fne.cpp  glyph.cpp  grouplen.cpp  groupord.cpp  le.cpp  minus.cpp  mul.cpp  pick.cpp  plus.cpp  power.cpp  primind.cpp  provides.cpp  provides_helpers.cpp  provides_helpers.hpp  range.cpp  root.cpp  scan.cpp  shape.cpp  stile.cpp  table.cpp  type.cpp  valence.cpp
src/driver/: C.cpp  ccxx.cpp  cxxc.cpp  driver.cpp  driver.hpp  main.cpp
src/instructions/: alim.cpp  arrm.cpp  arro.cpp  dfnd.cpp  fldm.cpp  fldo.cpp  fn1c.cpp  fn1o.cpp  fn2c.cpp  fn2o.cpp  instr_helpers.hpp  md1c.cpp  md2c.cpp  notm.cpp  pred.cpp  set_.cpp  seth.cpp  tr2d.cpp  tr3d.cpp  tr3o.cpp  varm.cpp  varo.cpp  vfym.cpp
src/namespaces/: cxbqn.cpp  file.cpp
src/namespaces/cxbqn/: plot.cpp
src/rt_native/: CMakeLists.txt  replace_with_native.cpp
src/rt_native/r0/: after.cpp  atop.cpp  before.cpp  choose.cpp  constant.cpp  drop.cpp  each.cpp  enlist_pair.cpp  fold.cpp  join_to.cpp  less.cpp  ltack.cpp  ne.cpp  over.cpp  repeat.cpp  rtack.cpp  select.cpp  self_swap.cpp  take.cpp
src/sys/: bqn.cpp  cudafor.cu  cxbqn.cpp  exit.cpp  ffi.cpp  flines.cpp  import.cpp  list.cpp  out.cpp  rename.cpp  repr.cpp  sh.cpp  show.cpp  sys_function_resolver.cpp  sys_helper.cpp  sys_helper.hpp  timed.cpp  unixtime.cpp
src/tools/: CMakeLists.txt  README.md  ccx.bqn  cxbqn-config.in  vars.bqn.in
src/types/: array.cpp  array_utils.cpp  bi.cpp  block.cpp  blockdef.cpp  blockinst.cpp  comp_unit.cpp  cxbqn_namespace.cpp  file_namespace.cpp  mem.cpp  namespace.cpp  op.cpp  ref_array.cpp  run.cpp  scope.cpp  types.cpp  varalias.cpp  vm.cpp  vm2.cpp
test/: CMakeLists.txt  ccx.bqn  ccxx.bqn  test_bc.cpp  test_bi.cpp  test_compiler_manual.cpp  test_compiler_setprims.cpp  test_debug.cpp  test_identity.cpp  test_op.cpp  test_preruntime.cpp  test_prim.cpp  test_prim_l0.cpp  test_prim_l1.cpp  test_prim_l2.cpp  test_prim_l3.cpp  test_prim_l4.cpp  test_prim_l5.cpp  test_prim_l6.cpp  test_prim_setprims.cpp  test_prim_setprims_l0.cpp  test_prim_setprims_l1.cpp  test_prim_setprims_l2.cpp  test_prim_setprims_l3.cpp  test_prim_setprims_l4.cpp  test_prim_setprims_l5.cpp  test_prim_setprims_l6.cpp  test_prim_setprims_throws.cpp  test_prim_throws.cpp  test_primitives.cpp  test_provide.cpp  test_provides.cpp  test_runtime.cpp  test_runtime_setprims.cpp  test_simple.cpp  test_simple.cpp.bk  test_types.cpp  test_under.cpp  test_underundo.cpp  test_undo.cpp  (+3 more)
test/bqn/: CMakeLists.txt  cuda.bqn  ffitest.cpp  runner.bqn  syntax.bqn
test/bqn/suites/always/: bytecode.bqn  headers.bqn  literal.bqn  namespace.bqn
test/bqn/suites/errors/: e12.bqn  ens.bqn
